--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@ body_class: contact
 	</div>
 	<div class="col">
 		<article> 
-			<h3 class="h4">LinkedIn:</h3>
+			<h3>LinkedIn:</h3>
 			<p>
 				<a href="https://www.linkedin.com/in/michelevdaardweg">linkedin.com/in/michelevdaardweg</a>
 			</p>
