Changed title for SEO

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-title: Website van front-end developer Michèle
+title: Front-end developer in Amsterdam en Utrecht Michèle
 layout: default
 body_class: frontpage
 ---
