Added meta desc and updated permalink

--- a/_posts/2010-01-01-poopycat-com.html
+++ b/_posts/2010-01-01-poopycat-com.html
@@ -1,8 +1,10 @@
 ---
 title: 'Poopy Cat'
+description: 'Voor Poopy Cat Litter Box heb ik het een groot deel van de front-end voor mijn rekening genomen. De webshop is gebouwd met ecommerce-platform PrestaShop.'
 author: Michèle
-layout: post
-permalink: /portfolio/poopy-cat/
+layout: 
+body_class: werk
+permalink: /werk/poopy-cat/
 image:
   feature: portfolio-image-poopy-cat-blocks.jpg
 categories:
