--- a/_posts/2010-01-02-alliwantforchristmast-nl.html
+++ b/_posts/2010-01-02-alliwantforchristmast-nl.html
@@ -1,8 +1,9 @@
 ---
 title: 'All I want for christmas'
+description: 'Een online adventkalender met veel CSS toeters en bellen, zoals transitions, transforms en animaties. Ook is de site responsive geoptimaliseerd.'
 author: Michèle
 layout: post
-body_class: portfolio
+body_class: werk
 permalink: /portfolio/all-i-want-for-christmas/
 image:
   feature: portfolio-image-alliwantforchristmas.jpg
