Added meta desc and updated permalink

--- a/_posts/2010-01-02-artipoppe-com.html
+++ b/_posts/2010-01-02-artipoppe-com.html
@@ -1,9 +1,10 @@
 ---
 title: 'Artipoppe - Interactieve video'
+description: 'Voor Artipoppe werkte ik aan de WordPress website, PrestaShop webshop en zorgde ik voor interactiviteit icm HTML5 video. Geheel responsive geoptimaliseerd.'
 author: Michèle
 layout: post
-body_class: portfolio
-permalink: /portfolio/artipoppe/
+body_class: werk
+permalink: /werk/artipoppe/
 image:
   feature: portfolio-image-artipoppe.jpg
 categories:
@@ -14,7 +15,7 @@ categories:
 	<p>Artipoppe ontwerpt en verkoopt draagdoeken van hoge kwaliteit. Occhio maakte de website en de webshop.</p>
 	<h2>Techniek</h2>
 	<p>Voor Artipoppe heb ik, in opdracht van Occhio, het grootste deel van de front-end voor mijn rekening genomen. De website is gebouwd met WordPress en de webshop met ecommerce-platform PrestaShop.</p>
-	<p>Een uitdagend onderdeel was het implementeren van HTML5 video met daarover heen een interactieve laag.  Inmiddels is de website overgedragen aan een andere partij, maar de animatie is nog beschikbaar.</p>
+	<p>Een uitdagend onderdeel was het implementeren van een HTML5 video met daarover heen een interactieve laag. Inmiddels is de website overgedragen aan een andere partij, maar de animatie is nog beschikbaar.</p>
 
 	<footer class="row">
 	 	<div class="col">
