Added meta desc and updated permalink

--- a/_posts/2010-01-02-qlitravel-com.html
+++ b/_posts/2010-01-02-qlitravel-com.html
@@ -1,9 +1,10 @@
 ---
 title: 'QLI Travel'
+description: 'Voor deze WordPress website heb ik me over de front-end onwtikkeling ontfermd. Ik maakte verschillende HTML5 templates.'
 author: Michèle
 layout: post
-body_class: portfolio
-permalink: /portfolio/qli-travel/
+body_class: werk
+permalink: /werk/qli-travel/
 image:
   feature: portfolio-image-qlitravel-desktop.jpg
 categories:
@@ -11,8 +12,6 @@ categories:
 tags:
   - Front-end
 ---
-
-
 
 	<h2>Concept</h2>
 	<p>Qli Travel heeft met de site als doel een online magazine te zijn, met objectieve, up-to-date reviews over ’s werelds beste restaurants, wijn en hotels. Ze zijn bedoeld de lezer te inspireren en om meer informatie te bieden over dit aanbod in het hogere segment.
