Added meta desc and updated permalink

--- a/_posts/2010-01-04-rood-witte-schare.html
+++ b/_posts/2010-01-04-rood-witte-schare.html
@@ -1,8 +1,9 @@
 ---
 title: 'Rood Witte Schare'
+description: 'Rood Witte Schare is gebouwd met WordPress en is volledig door mij gebouwd en responsive geoptimaliseerd. De website is een blog voor echte Ajax-fans.'
 author: Michèle
 layout: post
-permalink: /portfolio/rood-witte-schare/
+permalink: /werk/rood-witte-schare/
 image:
   feature: portfolio-header-rws.jpg
 categories:
@@ -12,7 +13,7 @@ categories:
 	<h2>Concept</h2>
 	<p>Twee enthousiaste Ajax-fans vroegen mij een website te ontwerpen en te ontwikkelen. De website is een blog, waar menig Ajax-fan hun hart zal kunnen ophalen.</p>
 	<h2>Techniek</h2>
-	<p>Deze website is gebouwd met WordPress en is volledig door mij gebouwd en responsive geoptimaliseerd. Ook zijn er enkele modules geimplementeerd die het blog ondersteunen, zoals gerelateerde artikelen, die met Ajax worden ingeladen en een afbeeldingen slider die de blogposts complimenteert.</p>
+	<p>Deze website is gebouwd met WordPress en is volledig door mij gebouwd en responsive geoptimaliseerd. Ook zijn er enkele modules geimplementeerd die het blog ondersteunen, zoals gerelateerde artikelen, die met Ajax worden ingeladen en een afbeeldingen-slider die de blogposts complimenteert.</p>
 	<p>Momenteel in ontwikkeling</p> 
 
 	<footer class="row">
