--- a/_posts/2010-01-01-poopycat-com.html
+++ b/_posts/2010-01-01-poopycat-com.html
@@ -2,21 +2,21 @@
 title: 'Poopy Cat'
 description: 'Voor Poopy Cat Litter Box heb ik het een groot deel van de front-end voor mijn rekening genomen. De webshop is gebouwd met ecommerce-platform PrestaShop.'
 author: Michèle
-layout: 
+layout: post
 body_class: werk
 permalink: /werk/poopy-cat/
 image:
-  feature: portfolio-image-poopy-cat-blocks.jpg
+  feature: portfolio-image-alliwantforchristmas.jpg
 categories:
   - Portfolio
 tags:
   - Front-end
 ---
+
 	<h2>Concept</h2>
 	<p>Poopy Pets, de makers van Poopy Cat, zijn altijd druk met ontwikkelingen van nieuwe, toffe producten. Zo hebben ze bijvoorbeeld een biologisch afbreekbare kattenbak en Poopy Cat Blocks op de markt gebracht.</p>
 	<h2>Techniek</h2>
 	<p>Voor Poopy Cat Litter Box heb ik, in opdracht voor Occhio, het een groot deel van de front-end voor mijn rekening genomen. De webshop is gebouwd met ecommerce-platform PrestaShop.</p>
-</p>
 
 	<footer class="row">
 	 	<div class="col">
