Moved class from body to main

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@ image:
   feature: post-image-contact.jpg
 body_class: contact
 ---
-<main class="row">
+<main class="contact row">
 	<div class="col">
 		<h1>Contact.</h1>
 	</div>
