Made post footer easier to use

--- a/_posts/2010-01-01-poopycat-com.html
+++ b/_posts/2010-01-01-poopycat-com.html
@@ -15,7 +15,7 @@ categories:
 	<h2>Techniek</h2>
 	<p>Voor Poopy Cat Litter Box heb ik, in opdracht voor Occhio, het een groot deel van de front-end voor mijn rekening genomen. De webshop is gebouwd met ecommerce-platform PrestaShop.</p>
 
-	<footer class="row">
+	<footer class="post-footer row">
 	 	<div class="col">
 			<dl> 
 				<dt class="gamma">Skills voor project</dt>
