Made post footer easier to use

--- a/_posts/2010-01-02-alliwantforchristmast-nl.html
+++ b/_posts/2010-01-02-alliwantforchristmast-nl.html
@@ -17,7 +17,7 @@ categories:
 	<h2>Techniek</h2>
 	<p>Voor deze website is er veelvuldig gebruik gemaakt van CSS3 toeters en bellen, zoals: transities, transforms en animaties. Ook is de site responsive geoptimaliseerd. Zelfs een parallax background mocht niet ontbreken.</p>
 
-	<footer class="row">
+	<footer class="post-footer row">
 	 	<div class="col">
 			<dl> 
 				<dt class="gamma">Skills voor project</dt>
