Made post footer easier to use

--- a/_posts/2010-01-02-artipoppe-com.html
+++ b/_posts/2010-01-02-artipoppe-com.html
@@ -15,7 +15,7 @@ categories:
 	<p>Voor Artipoppe heb ik, in opdracht van Occhio, het grootste deel van de front-end voor mijn rekening genomen. De website is gebouwd met WordPress en de webshop met ecommerce-platform PrestaShop.</p>
 	<p>Een uitdagend onderdeel was het implementeren van een HTML5 video met daarover heen een interactieve laag. Inmiddels is de website overgedragen aan een andere partij, maar de animatie is nog beschikbaar.</p>
 
-	<footer class="row">
+	<footer class="post-footer row">
 	 	<div class="col">
 			<dl> 
 				<dt class="gamma">Skills voor project</dt>
