Made post footer easier to use

--- a/_posts/2010-01-02-qlitravel-com.html
+++ b/_posts/2010-01-02-qlitravel-com.html
@@ -16,7 +16,7 @@ categories:
 	<h2>Techniek</h2>
 	<p>Deze website is gebouwd in WordPress en ik ontfermde me over de front-end ontwikkeling. In opdracht van Occhio heb ik verschillende templates met HTML5 gemaakt en het aangeleverde ontwerp vertaald naar een interactieve interface. Zo heb ik subtiele CSS transities en animaties toegevoegd. Ook is de site volledig responsive geoptimaliseerd.</p>
 
-	<footer class="row">
+	<footer class="post-footer row">
 	 	<div class="col">
 			<dl> 
 				<dt class="gamma">Skills voor project</dt>
