Made post footer easier to use

--- a/_posts/2010-01-04-rood-witte-schare.html
+++ b/_posts/2010-01-04-rood-witte-schare.html
@@ -16,7 +16,7 @@ categories:
 	<p>Deze website is gebouwd met WordPress en is volledig door mij gebouwd en responsive geoptimaliseerd. Ook zijn er enkele modules geimplementeerd die het blog ondersteunen, zoals gerelateerde artikelen, die met Ajax worden ingeladen en een afbeeldingen-slider die de blogposts complimenteert.</p>
 	<p>Momenteel in ontwikkeling</p> 
 
-	<footer class="row">
+	<footer class="post-footer row">
 	 	<div class="col">
 			<dl> 
 				<dt class="gamma">Skills voor project</dt>
