--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ layout: default
 	</main>
 
 	<!-- instafeed, only load on this page - https://github.com/stevenschobert/instafeed.js -->
-	<script src="{{ '/assets/js/instafeed.min.js' | prepend: site.baseurl }}"></script>
+	<script async src="{{ '/assets/js/instafeed.min.js' | prepend: site.baseurl }}"></script>
 
 	<script>
 		var feed = new Instafeed({
