Fixed wrong urls in work page

--- a/werk.html
+++ b/werk.html
@@ -15,62 +15,61 @@ permalink: /werk/
 		</article>
 		<article class="block-item row">
 			<header class="col">
-				<a href="/portfolio/artipoppe/">
+				<a href="/werk/artipoppe/">
 					<h2>Artipoppe</h2>
 					<h3>Interactive video</h3>
 				</a>
 			</header>
 			<div class="col" aria-hidden="true" role="presentation">
-				<a class="block-item-img" href="/portfolio/artipoppe/" style="background-image: url('/assets/images/portfolio-thumbnail-artipoppe.jpg');"></a>
+				<a class="block-item-img" href="/werk/artipoppe/" style="background-image: url('/assets/images/portfolio-thumbnail-artipoppe.jpg');"></a>
 				</div>
 		</article>
 		<article class="block-item row">
 			<header class="col">
-				<a href="/portfolio/poopy-cat/">
+				<a href="/werk/poopy-cat/">
 					<h2>Poopy Cat</h2>
 					<h3>Front-end website & shop</h3>
 				</a>	
 			</header>
 			<div class="col" aria-hidden="true" role="presentation">
-				<a class="block-item-img" href="/portfolio/poopy-cat/" style="background-image: url('/assets/images/portfolio-thumbnail-poopy-cat.jpg');">
+				<a class="block-item-img" href="/werk/poopy-cat/" style="background-image: url('/assets/images/portfolio-thumbnail-poopy-cat.jpg');">
 				</a>
 			</div>
 		</article>
 		<article class="block-item row">
 			<header class="col">
-				<a href="/portfolio/qli-travel/">
+				<a href="/werk/qli-travel/">
 					<h2>QLI Travel</h2>
 					<h3>Front-end website</h3>
 				</a>	
 			</header>
 			<div class="col" aria-hidden="true" role="presentation">
-				<a class="block-item-img" href="/portfolio/qli-travel/" style="background-image:url('/assets/images/portfolio-thumbnail-qlitravel.jpg');">
+				<a class="block-item-img" href="/werk/qli-travel/" style="background-image:url('/assets/images/portfolio-thumbnail-qlitravel.jpg');">
 				</a>
 			</div>
 		</article>
 		<article class="block-item row">
 			<header class="col">
-				<a href="/portfolio/all-i-want-for-christmas/">
+				<a href="/werk/all-i-want-for-christmas/">
 					<h2>All I want for christmas</h2>
 					<h3>Front-end website</h3>
 				</a>	
 			</header>
 			<div class="col" aria-hidden="true" role="presentation">
-				<a class="block-item-img" href="/portfolio/all-i-want-for-christmas/" style="background-image: url('/assets/images/portfolio-thumbnail-alliwantforchristmas.gif')">
+				<a class="block-item-img" href="/werk/all-i-want-for-christmas/" style="background-image: url('/assets/images/portfolio-thumbnail-alliwantforchristmas.gif')">
 				</a>
 			</div>
 		</article>
 		<article class="block-item row">
 			<header class="col">
-				<a href="/portfolio/rood-witte-schare/">
+				<a href="/werk/rood-witte-schare/">
 					<h2>Rood Witte Schare</h2>
 					<h3>Design & ontwikkeling website</h3>
 				</a>	
 			</header>
 			<div class="col" aria-hidden="true" role="presentation">
-				<a class="block-item-img" href="/portfolio/rood-witte-schare/" style="background-image: url('/assets/images/portfolio-thumbnail-rws.jpg')">
+				<a class="block-item-img" href="/werk/rood-witte-schare/" style="background-image: url('/assets/images/portfolio-thumbnail-rws.jpg')">
 				</a>
 			</div>
 		</article>
 	</main>
-	
