Used srcset for Insta images

--- a/index.html
+++ b/index.html
@@ -33,10 +33,9 @@ layout: default
 			<h3 class="beta">Instagram</h3>
 		</header>
 		<a href="https://www.instagram.com/p/uyqhRXtpcc/?taken-by=michelevda">
-			<img src="/assets/images/instagram-picture-1.jpg" alt="Foto van de kat van Michèle op Instagram">
+			<img src="/assets/images/instagram-picture-1-sm.jpg" srcset="/assets/images/instagram-picture-1.jpg 1000w" alt="Foto van de kat van Michèle op Instagram">
 		</a>
-		
 		<a href="https://www.instagram.com/p/uTTLjfNpbx/?taken-by=michelevda">
-			<img src="/assets/images/instagram-picture-2.jpg" alt="Foto van de schoenen van Michèle op Instagram">
+			<img src="/assets/images/instagram-picture-2-sm.jpg"  srcset="/assets/images/instagram-picture-2.jpg 1000w" alt="Foto van de schoenen van Michèle op Instagram">
 		</a>
 	</section>
