Refactored image-container

--- a/_posts/2010-01-01-poopycat-com.html
+++ b/_posts/2010-01-01-poopycat-com.html
@@ -29,5 +29,8 @@ categories:
 			<a role="button" href="http://www.poopycat.com/en/3-litterbox">Bezoek website</a>
 		</div>
 	</footer>
-
-<p><img src="/assets/images/portfolio-image-poopycat-desktop.jpg" alt="Poopy Cat webshop"></p>
+	<div class="image-container">
+		<div class="image-frame">
+			<img src="/assets/images/portfolio-image-poopycat-desktop.jpg" alt="Poopy Cat webshop">
+		</div>
+	</div>
