--- a/_posts/2010-01-02-alliwantforchristmast-nl.html
+++ b/_posts/2010-01-02-alliwantforchristmast-nl.html
@@ -33,10 +33,12 @@ categories:
 			<a role="button" href="http://www.alliwantforchristmas.nl">Bezoek website</a>
 		</div>
 	</footer>
-	<p>
-		<img src="/assets/images/portfolio-alliwant-banners.gif" alt="All I want for Christmas Facebook-banners">
+	<div class="image-container">
+		<div class="image-frame">
+			<img src="/assets/images/portfolio-alliwant-banners.gif" alt="All I want for Christmas Facebook-banners">
+		</div>
 		<span class="caption">Een selectie van de ontworpen Facebook-banners</span>
-	</p>
+	</div>
 
 	<p data-height="380" data-theme-id="light" data-slug-hash="RWKaYP" data-default-tab="result" data-user="michelenl" data-embed-version="2" class="codepen">See the Pen <a href="http://codepen.io/michelenl/pen/RWKaYP/">CSS Advent Calendar</a> by Michèle van den Aardweg (<a href="http://codepen.io/michelenl">@michelenl</a>) on <a href="http://codepen.io">CodePen</a>.</p>
 
