--- a/_posts/2010-01-02-artipoppe-com.html
+++ b/_posts/2010-01-02-artipoppe-com.html
@@ -33,7 +33,9 @@ categories:
 			<a role="button" href="http://artipoppe.com/look/macarons/">Bekijk video animatie</a>
 		</div>
 	</footer>
-	<p>
-		<img src="/assets/images/portfolio-image-artipoppe-macarons.jpg" alt="Artipoppe Macarons">
+	<div class="image-container">
+		<div class="image-frame">
+			<img src="/assets/images/portfolio-image-artipoppe-macarons.jpg" alt="Artipoppe Macarons">
+		</div>
 		<span class="caption">De macarons worden over de video heengeplaatst na het afspelen, en leiden naar nieuwe pagina's.</span>
-	</p>
+	</div>
