--- a/_posts/2010-01-04-rood-witte-schare.html
+++ b/_posts/2010-01-04-rood-witte-schare.html
@@ -32,6 +32,10 @@ categories:
 			<a role="button" href="mailto:mail@michele.nl">Webadres op aanvraag</a>
 		</div>
 	</footer>
-	<p><img src="/assets/images/portfolio-image-rws-colors.jpg" alt="Hay House Copenhagen">
-		<span class="caption">Het gekozen kleurpalette</span></p>
-<img src="/assets/images/portfolio-image-rws.jpg" alt="Hay House Copenhagen">
+	<div class="image-container">
+		<div class="image-frame">
+			<img src="/assets/images/portfolio-image-rws-colors.jpg" alt="Hay House Copenhagen">
+		</div>
+		<span class="caption">Het gekozen kleurpalette</span>
+	</div>
+	<img src="/assets/images/portfolio-image-rws.jpg" alt="Hay House Copenhagen">
