--- a/curriculum-vitae.html
+++ b/curriculum-vitae.html
@@ -9,58 +9,56 @@ permalink: /curriculum-vitae/
 			<li><a href="#vaardigheden"><span>Vaardigheden</span></a></li>
 			<li><a href="#werkervaring"><span>Werkervaring</span></a></li>
 			<li><a href="#opleiding"><span>Opleiding</span></a></li>
-			<li><a href="#cursussen-workshops"><span>Cursussen</a></span></li>
+			<li><a href="#cursussen-workshops"><span>Cursussen</span></a></li>
 		</ul>
 	</nav>	
 	<main>
 		<section class="cv-section row block-item about" id="over-michele" itemscope itemtype="http://schema.org/Person">
-			<header class="block-item-img col" style="background-image: url('/assets/images/profile-picture-michele-van-den-aardweg-square.jpg');">
+			<header class="block-item-img col" style="background-image: url('/assets/images/michele-van-den-aardweg.jpg');">
 		  		<h2>Curriculum Vitae</h2>
 			</header>
-			
 			<div class="col">
-					<dl class="data-list">
-						<dt>Naam</dt>
-						<dd itemprop="name">Michèle van den Aardweg</dd>
-						<dt>Geboortedatum</dt>
-						<dd itemprop="birthDate">1 maart 1984</dd>
-						<dt>Woonplaats</dt>
-						<dd itemprop="homeLocation">Utrecht, Nederland</dd>
-						<dt>Telefoon</dt>
-						<dd itemprop="telephone">06 - 28 56 47 09  </dd>
-						<dt>Email</dt>
-						<dd><a itemprop="email" href="mailto:mail@michele.nl ">mail@michele.nl</a></dd>
-					</dl>
-					<ul class="social-media-list">
-			<li>
-				<a href="https://www.linkedin.com/in/michelevdaardweg" title="LinkedIn">
-					<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" width="" height="" viewBox="0 4.559 430.117 416.002" enable-background="new 0 4.559 430.117 416.002" xml:space="preserve">
-						<g>
-							<path id="LinkedIn" d="M430.117 261.543v159.018h-92.188V272.193c0-37.271-13.334-62.708-46.703-62.708 -25.474 0-40.632 17.142-47.302 33.724 -2.432 5.929-3.058 14.179-3.058 22.478v154.873h-92.219c0 0 1.242-251.286 0-277.32h92.21v39.309c-0.188 0.294-0.43 0.611-0.606 0.896h0.606v-0.896c12.251-18.869 34.13-45.824 83.103-45.824C384.634 136.724 430.117 176.361 430.117 261.543zM52.183 9.558C20.635 9.558 0 30.251 0 57.463c0 26.619 20.038 47.94 50.959 47.94h0.616c32.159 0 52.159-21.317 52.159-47.94C103.128 30.251 83.734 9.558 52.183 9.558zM5.477 420.561h92.184V143.24H5.477V420.561z"/>
-						</g>
-					</svg>
-					<span class="screenreader">Volg Michèle op LinkedIn</span>
-				</a>
-			</li>	
-			<li class="github">
-				<a href="https://github.com/michelenl">
-					<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0" y="0" width="512" height="512" viewBox="0 0 475.1 475.1" xml:space="preserve">
-						<path d="M436.2 146.8c5.1-15.4 7.7-31.4 7.7-48 0-22.1-4.9-42.8-14.6-62.2 -20.4 0-38.3 3.7-54 11.1 -15.6 7.4-33.4 18.9-53.4 34.5 -25.1-6.1-51.8-9.1-79.9-9.1 -30.8 0-60.2 3.3-88.2 10 -20.4-16-38.4-27.7-54-35.3 -15.6-7.5-33.7-11.3-54.2-11.3 -9.7 19.4-14.6 40.2-14.6 62.2 0 16.8 2.6 32.9 7.7 48.5C12.9 177.6 0 215.3 0 260.4c0 39.6 5.9 71.1 17.7 94.5 6.3 12.4 14.5 23.3 24.6 32.8 10.1 9.5 21.6 17.2 34.5 23.1 12.9 5.9 26 10.8 39.1 14.7 13.1 3.9 27.6 6.8 43.5 8.6 15.9 1.8 29.9 3 42.1 3.6 12.2 0.6 25.7 0.9 40.5 0.9 17.5 0 33.4-0.4 47.7-1.3 14.3-0.9 30.6-3 49-6.3 18.4-3.3 34.5-7.9 48.5-13.6 14-5.7 27.4-13.9 40.3-24.6 12.8-10.7 22.9-23.3 30.1-38 11.6-23.6 17.4-55.1 17.4-94.5C475.1 215.1 462.1 177.2 436.2 146.8zM402 354.5c-6.1 12.5-13.8 22.3-23.1 29.4 -9.3 7.1-20.9 12.8-34.8 17.1 -13.9 4.3-27.2 7.1-40 8.4 -12.8 1.3-26.9 2-42.5 2h-48c-15.6 0-29.8-0.7-42.5-2 -12.8-1.3-26.1-4.1-40-8.4 -13.9-4.3-25.5-10-34.8-17.1 -9.3-7.1-17-16.9-23.1-29.4 -6.1-12.5-9.1-27.1-9.1-43.8 0-22.8 6.6-42.3 19.7-58.2 13.1-16 30.9-24 53.4-24 8.2 0 26.7 2 55.7 6 13.5 2.1 28.5 3.1 44.8 3.1 16.4 0 31.3-1 44.8-3.1 29.3-4 47.9-6 55.7-6 22.5 0 40.3 8 53.4 24 13.1 16 19.7 35.4 19.7 58.2C411.1 327.4 408.1 342 402 354.5zM166.9 265.5c-5.8-6.5-12.7-9.7-20.7-9.7 -8 0-14.9 3.2-20.7 9.7 -5.8 6.5-9.9 13.7-12.3 21.7 -2.4 8-3.6 15.8-3.6 23.4 0 7.6 1.2 15.4 3.6 23.4 2.4 8 6.5 15.2 12.3 21.7 5.8 6.5 12.7 9.7 20.7 9.7 8 0 14.9-3.2 20.7-9.7 5.8-6.5 9.9-13.7 12.3-21.7 2.4-8 3.6-15.8 3.6-23.4 0-7.6-1.2-15.4-3.6-23.4C176.8 279.2 172.7 272 166.9 265.5zM349.6 265.5c-5.8-6.5-12.7-9.7-20.7-9.7 -8 0-14.9 3.2-20.7 9.7 -5.8 6.5-9.9 13.7-12.3 21.7 -2.4 8-3.6 15.8-3.6 23.4 0 7.6 1.2 15.4 3.6 23.4 2.4 8 6.5 15.2 12.3 21.7 5.8 6.5 12.7 9.7 20.7 9.7 8 0 14.9-3.2 20.7-9.7 5.8-6.5 9.9-13.7 12.3-21.7 2.4-8 3.6-15.8 3.6-23.4 0-7.6-1.2-15.4-3.6-23.4C359.5 279.2 355.4 272 349.6 265.5z"/>
-					</svg>
-					<span class="screenreader">Volg Michèle op GitHub</span>
-				</a>
-			</li>
-			<li class="codepen">
-				<a href="http://www.codepen.io/michelenl/" title="CodePen">
-					<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" width="" height="" viewBox="0 0 31.665 31.665" enable-background="new 0 0 31.665 31.665" xml:space="preserve">
-						<path d="M16.877 0.415c-0.854-0.565-1.967-0.552-2.809 0.034L1.485 9.214c-0.671 0.468-1.071 1.233-1.071 2.052v9.443c0 0.84 0.421 1.623 1.122 2.086l12.79 8.455c0.836 0.554 1.922 0.554 2.758 0l13.043-8.617c0.701-0.463 1.123-1.246 1.123-2.086v-9.279c0-0.839-0.422-1.622-1.121-2.085L16.877 0.415zM26.622 10.645l-4.822 3.237 -4.521-3.288L17.25 4.127 26.622 10.645zM13.979 4.133v6.329l-4.633 3.24 -4.621-3.099L13.979 4.133zM3.458 13.722l2.991 2.004 -2.991 2.093V13.722zM14.058 27.215l-9.331-6.258L9.388 17.7l4.67 3.133V27.215zM12.286 15.674l3.021-2.113 3.52 2.313 -3.12 2.095L12.286 15.674zM17.354 27.215v-6.385l4.463-2.992 4.805 3.16L17.354 27.215zM27.954 17.926l-3.168-2.082 3.168-2.125V17.926z"/>
-					</svg>
-					<span class="screenreader">Volg Michèle op CodePen</span>
-				</a>
-			</li>		
-			
-		</ul>
-				</div>
+				<dl class="data-list">
+					<dt>Naam</dt>
+					<dd itemprop="name">Michèle van den Aardweg</dd>
+					<dt>Geboortedatum</dt>
+					<dd itemprop="birthDate">1 maart 1984</dd>
+					<dt>Woonplaats</dt>
+					<dd itemprop="homeLocation">Utrecht, Nederland</dd>
+					<dt>Telefoon</dt>
+					<dd itemprop="telephone">06 - 28 56 47 09  </dd>
+					<dt>Email</dt>
+					<dd><a itemprop="email" href="mailto:mail@michele.nl ">mail@michele.nl</a></dd>
+				</dl>
+				<ul class="social-media-list">
+					<li>
+						<a href="https://www.linkedin.com/in/michelevdaardweg" title="LinkedIn">
+							<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" width="" height="" viewBox="0 4.559 430.117 416.002" enable-background="new 0 4.559 430.117 416.002" xml:space="preserve">
+								<g>
+									<path id="LinkedIn" d="M430.117 261.543v159.018h-92.188V272.193c0-37.271-13.334-62.708-46.703-62.708 -25.474 0-40.632 17.142-47.302 33.724 -2.432 5.929-3.058 14.179-3.058 22.478v154.873h-92.219c0 0 1.242-251.286 0-277.32h92.21v39.309c-0.188 0.294-0.43 0.611-0.606 0.896h0.606v-0.896c12.251-18.869 34.13-45.824 83.103-45.824C384.634 136.724 430.117 176.361 430.117 261.543zM52.183 9.558C20.635 9.558 0 30.251 0 57.463c0 26.619 20.038 47.94 50.959 47.94h0.616c32.159 0 52.159-21.317 52.159-47.94C103.128 30.251 83.734 9.558 52.183 9.558zM5.477 420.561h92.184V143.24H5.477V420.561z"/>
+								</g>
+							</svg>
+							<span class="screenreader">Volg Michèle op LinkedIn</span>
+						</a>
+					</li>	
+					<li class="github">
+						<a href="https://github.com/michelenl">
+							<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0" y="0" width="512" height="512" viewBox="0 0 475.1 475.1" xml:space="preserve">
+								<path d="M436.2 146.8c5.1-15.4 7.7-31.4 7.7-48 0-22.1-4.9-42.8-14.6-62.2 -20.4 0-38.3 3.7-54 11.1 -15.6 7.4-33.4 18.9-53.4 34.5 -25.1-6.1-51.8-9.1-79.9-9.1 -30.8 0-60.2 3.3-88.2 10 -20.4-16-38.4-27.7-54-35.3 -15.6-7.5-33.7-11.3-54.2-11.3 -9.7 19.4-14.6 40.2-14.6 62.2 0 16.8 2.6 32.9 7.7 48.5C12.9 177.6 0 215.3 0 260.4c0 39.6 5.9 71.1 17.7 94.5 6.3 12.4 14.5 23.3 24.6 32.8 10.1 9.5 21.6 17.2 34.5 23.1 12.9 5.9 26 10.8 39.1 14.7 13.1 3.9 27.6 6.8 43.5 8.6 15.9 1.8 29.9 3 42.1 3.6 12.2 0.6 25.7 0.9 40.5 0.9 17.5 0 33.4-0.4 47.7-1.3 14.3-0.9 30.6-3 49-6.3 18.4-3.3 34.5-7.9 48.5-13.6 14-5.7 27.4-13.9 40.3-24.6 12.8-10.7 22.9-23.3 30.1-38 11.6-23.6 17.4-55.1 17.4-94.5C475.1 215.1 462.1 177.2 436.2 146.8zM402 354.5c-6.1 12.5-13.8 22.3-23.1 29.4 -9.3 7.1-20.9 12.8-34.8 17.1 -13.9 4.3-27.2 7.1-40 8.4 -12.8 1.3-26.9 2-42.5 2h-48c-15.6 0-29.8-0.7-42.5-2 -12.8-1.3-26.1-4.1-40-8.4 -13.9-4.3-25.5-10-34.8-17.1 -9.3-7.1-17-16.9-23.1-29.4 -6.1-12.5-9.1-27.1-9.1-43.8 0-22.8 6.6-42.3 19.7-58.2 13.1-16 30.9-24 53.4-24 8.2 0 26.7 2 55.7 6 13.5 2.1 28.5 3.1 44.8 3.1 16.4 0 31.3-1 44.8-3.1 29.3-4 47.9-6 55.7-6 22.5 0 40.3 8 53.4 24 13.1 16 19.7 35.4 19.7 58.2C411.1 327.4 408.1 342 402 354.5zM166.9 265.5c-5.8-6.5-12.7-9.7-20.7-9.7 -8 0-14.9 3.2-20.7 9.7 -5.8 6.5-9.9 13.7-12.3 21.7 -2.4 8-3.6 15.8-3.6 23.4 0 7.6 1.2 15.4 3.6 23.4 2.4 8 6.5 15.2 12.3 21.7 5.8 6.5 12.7 9.7 20.7 9.7 8 0 14.9-3.2 20.7-9.7 5.8-6.5 9.9-13.7 12.3-21.7 2.4-8 3.6-15.8 3.6-23.4 0-7.6-1.2-15.4-3.6-23.4C176.8 279.2 172.7 272 166.9 265.5zM349.6 265.5c-5.8-6.5-12.7-9.7-20.7-9.7 -8 0-14.9 3.2-20.7 9.7 -5.8 6.5-9.9 13.7-12.3 21.7 -2.4 8-3.6 15.8-3.6 23.4 0 7.6 1.2 15.4 3.6 23.4 2.4 8 6.5 15.2 12.3 21.7 5.8 6.5 12.7 9.7 20.7 9.7 8 0 14.9-3.2 20.7-9.7 5.8-6.5 9.9-13.7 12.3-21.7 2.4-8 3.6-15.8 3.6-23.4 0-7.6-1.2-15.4-3.6-23.4C359.5 279.2 355.4 272 349.6 265.5z"/>
+							</svg>
+							<span class="screenreader">Volg Michèle op GitHub</span>
+						</a>
+					</li>
+					<li class="codepen">
+						<a href="http://www.codepen.io/michelenl/" title="CodePen">
+							<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" width="" height="" viewBox="0 0 31.665 31.665" enable-background="new 0 0 31.665 31.665" xml:space="preserve">
+								<path d="M16.877 0.415c-0.854-0.565-1.967-0.552-2.809 0.034L1.485 9.214c-0.671 0.468-1.071 1.233-1.071 2.052v9.443c0 0.84 0.421 1.623 1.122 2.086l12.79 8.455c0.836 0.554 1.922 0.554 2.758 0l13.043-8.617c0.701-0.463 1.123-1.246 1.123-2.086v-9.279c0-0.839-0.422-1.622-1.121-2.085L16.877 0.415zM26.622 10.645l-4.822 3.237 -4.521-3.288L17.25 4.127 26.622 10.645zM13.979 4.133v6.329l-4.633 3.24 -4.621-3.099L13.979 4.133zM3.458 13.722l2.991 2.004 -2.991 2.093V13.722zM14.058 27.215l-9.331-6.258L9.388 17.7l4.67 3.133V27.215zM12.286 15.674l3.021-2.113 3.52 2.313 -3.12 2.095L12.286 15.674zM17.354 27.215v-6.385l4.463-2.992 4.805 3.16L17.354 27.215zM27.954 17.926l-3.168-2.082 3.168-2.125V17.926z"/>
+							</svg>
+							<span class="screenreader">Volg Michèle op CodePen</span>
+						</a>
+					</li>		
+				</ul>
+			</div>
 		</section>
 		<section class="cv-section block-item row" id="vaardigheden">
 			<header class="col">
@@ -92,154 +90,153 @@ permalink: /curriculum-vitae/
 		</section>
 
 		<section class="cv-section block-item row" id="werkervaring">
-				<header class="col">
-					<h2>Werkervaring</h2>
-				</header>
-				<dl class="timeline timeline-experience col">
-					<dt>
-						2007 - heden
-					</dt>
-					<dd>
-						<article>
-							<h3>Senior front-end developer </h3>
-							<p>Occhio BV</p>
-						</article>
-						<span aria-hidden="true" class="time-dot"></span>
-					</dd>
-					<dt>			
-						2015 - heden
-					</dt>
-					<dd>
-						<article>
-							<h3>Gastdocent  Communication & Multimedia Design</h3>
-							<p>Hogeschool van Amsterdam</p>
-						</article>
-						<span aria-hidden="true" class="time-dot"></span>
-					</dd>
-					<dt>
- 						2010 - 2011
-					</dt>
-					<dd>
-						<article>	
-							<h3>Blogger</h3>
-							<p>Lacquerized.com</p>
-						</article>
-						<span aria-hidden="true" class="time-dot"></span>
-					</dd>
-					<dt>
-						2009 - 2012
-					</dt>
-					<dd>
-						<article>
-							<h3>Freelance front-end developer</h3>
-							<p>Michele.nl</p>
-						</article>
-						<span aria-hidden="true" class="time-dot"></span>
-					</dd>
-					<dt>			
-						2010
-					</dt>
-					<dd>
-						<article>
-							<h3>Afstudeerstage: mobile web development</h3>
-							<p>Occhio BV</p>
-						</article>
-						<span aria-hidden="true" class="time-dot"></span>
-					</dd>
-				</dl>
-			</section>
+			<header class="col">
+				<h2>Werkervaring</h2>
+			</header>
+			<dl class="timeline timeline-experience col">
+				<dt>
+					2007 - heden
+				</dt>
+				<dd>
+					<article>
+						<h3>Senior front-end developer </h3>
+						<p>Occhio BV</p>
+					</article>
+					<span aria-hidden="true" class="time-dot"></span>
+				</dd>
+				<dt>			
+					2015 - heden
+				</dt>
+				<dd>
+					<article>
+						<h3>Gastdocent  Communication & Multimedia Design</h3>
+						<p>Hogeschool van Amsterdam</p>
+					</article>
+					<span aria-hidden="true" class="time-dot"></span>
+				</dd>
+				<dt>
+						2010 - 2011
+				</dt>
+				<dd>
+					<article>	
+						<h3>Blogger</h3>
+						<p>Lacquerized.com</p>
+					</article>
+					<span aria-hidden="true" class="time-dot"></span>
+				</dd>
+				<dt>
+					2009 - 2012
+				</dt>
+				<dd>
+					<article>
+						<h3>Freelance front-end developer</h3>
+						<p>Michele.nl</p>
+					</article>
+					<span aria-hidden="true" class="time-dot"></span>
+				</dd>
+				<dt>			
+					2010
+				</dt>
+				<dd>
+					<article>
+						<h3>Afstudeerstage: mobile web development</h3>
+						<p>Occhio BV</p>
+					</article>
+					<span aria-hidden="true" class="time-dot"></span>
+				</dd>
+			</dl>
+		</section>
 			
-			<section class="cv-section block-item courses row" id="opleiding">
-				<header class="col">
-					<h2>Opleiding</h2>
-				</header>
-				<dl class="timeline col">
-					<dt>
-						HBO
+		<section class="cv-section block-item courses row" id="opleiding">
+			<header class="col">
+				<h2>Opleiding</h2>
+			</header>
+			<dl class="timeline col">
+				<dt>
+					HBO
+				</dt>
+				<dd>
+					<article>
+						<h3>B Communication & Multimedia Design</h3>
+						<p>Hogeschool van Amsterdam</p>
+					</article>
+					<span aria-hidden="true" class="time-dot"></span>
+				</dd>
+				<dt>
+					VO
 					</dt>
-					<dd>
-						<article>
-							<h3>B Communication & Multimedia Design</h3>
-							<p>Hogeschool van Amsterdam</p>
-						</article>
-						<span aria-hidden="true" class="time-dot"></span>
-					</dd>
-					<dt>
-						VO
- 					</dt>
-					<dd>
-						<article>
-							<h3>HAVO </h3>
-							<p>Alkwin Kollege (Uithoorn) / ROC Nova College (Amstelveen)</p>
-						</article>
-						<span aria-hidden="true" class="time-dot"></span>
-					</dd>
-				</dl>
-			</section>
-			<section class="cv-section block-item courses row" id="cursussen-workshops">
-				<header class="col">
-					<h2>Cursussen & workshops</h2>
-				</header>
-				<dl class="timeline col">
-					<dt>2016</dt>
-					<dd>
-						<article>
-							<h3>React for Beginners</h3>
-							<p>door Wes Bos</p>
-						</article>
-						<span aria-hidden="true" class="time-dot"></span>
-					</dd>
-					<dt>2015</dt>
-					<dd>
-						<article>
-							<h3>Advanced Sass</h3>
-							<p>door Roy Tomeij / Fronteers </p>
-						</article>
-						<span aria-hidden="true" class="time-dot"></span>
-					</dd>
-					<dt>2015</dt>
-					<dd>
-						<article>
-							<h3>Interactieve visualisaties</h3>
-							<p>webtechnieken zoals CSS, SVG en Canvas, door Arjan Eising / Fronteers</p>
-						</article>
-						<span aria-hidden="true" class="time-dot"></span>
-					</dd>
-					<dt>2014</dt>
-					<dd>
-						<article>
-							<h3>Webrichtlijnen voor front-enders</h3>
-							<p>  door Jules Ernst / Fronteers</p>
-						</article>
-						<span aria-hidden="true" class="time-dot"></span>
-					</dd>
-					<dt>2013</dt>
-					<dd>
-						<article>
-							<h3> Mobiel Web</h3>
-							<p>ontwikkelen voor het mobile web, door Frances de Waal (W3C) / Fronteers</p>
-						</article>
-						<span aria-hidden="true" class="time-dot"></span>
-					</dd>
-					<dt>2013</dt>
-					<dd>
-						<article>
-							<h3> Screw CSS!</h3>
-							<p>Sass & pre-processors, door Roy Tomeij / Fronteers</p>
-						</article>
-						<span aria-hidden="true" class="time-dot"></span>
-					</dd>
-					<dt>2012</dt>
-					<dd>
-						<article>
-							<h3> jQuery Inception</h3>
-							<p>JavaScript en jQuery, door Arjan Eising / Fronteers</p>
-						</article>
-						<span aria-hidden="true" class="time-dot"></span>	
-					</dd>
-				</dl>
-			</section>
-		</div>
+				<dd>
+					<article>
+						<h3>HAVO </h3>
+						<p>Alkwin Kollege (Uithoorn) / ROC Nova College (Amstelveen)</p>
+					</article>
+					<span aria-hidden="true" class="time-dot"></span>
+				</dd>
+			</dl>
+		</section>
+		<section class="cv-section block-item courses row" id="cursussen-workshops">
+			<header class="col">
+				<h2>Cursussen & workshops</h2>
+			</header>
+			<dl class="timeline col">
+				<dt>2016</dt>
+				<dd>
+					<article>
+						<h3>React for Beginners</h3>
+						<p>door Wes Bos</p>
+					</article>
+					<span aria-hidden="true" class="time-dot"></span>
+				</dd>
+				<dt>2015</dt>
+				<dd>
+					<article>
+						<h3>Advanced Sass</h3>
+						<p>door Roy Tomeij / Fronteers </p>
+					</article>
+					<span aria-hidden="true" class="time-dot"></span>
+				</dd>
+				<dt>2015</dt>
+				<dd>
+					<article>
+						<h3>Interactieve visualisaties</h3>
+						<p>webtechnieken zoals CSS, SVG en Canvas, door Arjan Eising / Fronteers</p>
+					</article>
+					<span aria-hidden="true" class="time-dot"></span>
+				</dd>
+				<dt>2014</dt>
+				<dd>
+					<article>
+						<h3>Webrichtlijnen voor front-enders</h3>
+						<p>  door Jules Ernst / Fronteers</p>
+					</article>
+					<span aria-hidden="true" class="time-dot"></span>
+				</dd>
+				<dt>2013</dt>
+				<dd>
+					<article>
+						<h3> Mobiel Web</h3>
+						<p>ontwikkelen voor het mobile web, door Frances de Waal (W3C) / Fronteers</p>
+					</article>
+					<span aria-hidden="true" class="time-dot"></span>
+				</dd>
+				<dt>2013</dt>
+				<dd>
+					<article>
+						<h3> Screw CSS!</h3>
+						<p>Sass & pre-processors, door Roy Tomeij / Fronteers</p>
+					</article>
+					<span aria-hidden="true" class="time-dot"></span>
+				</dd>
+				<dt>2012</dt>
+				<dd>
+					<article>
+						<h3> jQuery Inception</h3>
+						<p>JavaScript en jQuery, door Arjan Eising / Fronteers</p>
+					</article>
+					<span aria-hidden="true" class="time-dot"></span>	
+				</dd>
+			</dl>
+		</section>
 		<div class="row">
 			<section class="quotes col">
 				<h2>Quotes I live by</h2>
