Some accessibility optimizations

--- a/curriculum-vitae.html
+++ b/curriculum-vitae.html
@@ -15,7 +15,7 @@ permalink: /curriculum-vitae/
 	<main>
 		<section class="cv-section row block-item about" id="over-michele" itemscope itemtype="http://schema.org/Person">
 			<header class="block-item-img col" style="background-image: url('/assets/images/michele-van-den-aardweg.jpg');">
-		  		<h2>Curriculum Vitae</h2>
+		  		<h1 class="beta">Curriculum Vitae</h1>
 			</header>
 			<div class="col">
 				<dl class="data-list">
