--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ layout: default
 			</div>
 			<div class="col">
 				<p>Binnen het vakgebied ben ik een wandelend cliché: ik houd van lekkere koffie én katten. Gelukkig ben ik geen ninja, of een unicorn.</p>
-				<h3>En verder?</h3>
+				<h2 class="gamma">En verder?</h2>
 				<p>Verder ben ik gek op Scandinavische detectives, spekkoek, concerten, vegetarisch voedsel, onze kat <a href="https://www.instagram.com/p/BFPPT1OtpQ_/">Saai</a>, speuren naar vintage meubels, horror- en arthouse films, een lekker potje metal en <em>Monkey Island™</em>.</p>
 				<a href="/werk/" role="button">Bekijk Werk</a>
 				<a href="/curriculum-vitae/" role="button">Bekijk CV</a>
@@ -33,9 +33,9 @@ layout: default
 			<h3 class="beta">Instagram</h3>
 		</header>
 		<a href="https://www.instagram.com/p/uyqhRXtpcc/?taken-by=michelevda">
-			<img src="/assets/images/instagram-picture-1-sm.jpg" srcset="/assets/images/instagram-picture-1-sm.jpg 400w, /assets/images/instagram-picture-1.jpg 1000w" alt="Foto van de kat van Michèle op Instagram">
+			<img src="/assets/images/instagram-picture-1-sm.jpg" srcset="/assets/images/instagram-picture-1-sm.jpg 400w, /assets/images/instagram-picture-1.jpg 1000w" sizes="(max-width: 1000px) 100vw, 1000px" alt="Foto van de kat van Michèle op Instagram">
 		</a>
 		<a href="https://www.instagram.com/p/uTTLjfNpbx/?taken-by=michelevda">
-			<img src="/assets/images/instagram-picture-2-sm.jpg" srcset="/assets/images/instagram-picture-2-sm.jpg 400w, /assets/images/instagram-picture-2.jpg 1000w" alt="Foto van de schoenen van Michèle op Instagram">
+			<img src="/assets/images/instagram-picture-2-sm.jpg" srcset="/assets/images/instagram-picture-2-sm.jpg 400w, /assets/images/instagram-picture-2.jpg 1000w"  sizes="(max-width: 1000px) 100vw, 1000px"  alt="Foto van de schoenen van Michèle op Instagram">
 		</a>
 	</section>
