--- a/contact.html
+++ b/contact.html
@@ -9,11 +9,11 @@ permalink: /contact/
 	</div>
 	<div class="col">
 		<article> 
-			<h3>LinkedIn:</h3>
+			<h2>LinkedIn:</h2>
 			<p>
 				<a href="https://www.linkedin.com/in/michelevdaardweg">linkedin.com/in/michelevdaardweg</a>
 			</p>
-			<h3 class="h4">Email:</h3>
+			<h2>Email:</h2>
 			<p>
 				<a href="mailto:mail@michele.nl">mail@michele.nl</a>
 			</p>
