Made items screen reader friendly

--- a/contact.html
+++ b/contact.html
@@ -11,25 +11,24 @@ permalink: /contact/
 		<article> 
 			<h2>LinkedIn:</h2>
 			<p>
-				<a href="https://www.linkedin.com/in/michelevdaardweg">linkedin.com/in/michelevdaardweg</a>
+				<a href="https://www.linkedin.com/in/michelevdaardweg" aria-label="Ga naar het LinkedIn profiel van Michèle">linkedin.com/in/michelevdaardweg</a>
 			</p>
 			<h2>Email:</h2>
 			<p>
-				<a href="mailto:mail@michele.nl">mail@michele.nl</a>
+				<a href="mailto:mail@michele.nl" aria-label="Stuur Michèle een email">mail@michele.nl</a>
 			</p>
 			<ul class="social-media-list">
 				<li>
-					<a href="https://www.linkedin.com/in/michelevdaardweg" title="LinkedIn">
+					<a href="https://www.linkedin.com/in/michelevdaardweg" title="LinkedIn" aria-label="Ga naar het LinkedIn profiel van Michèle">
 						<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" width="" height="" viewBox="0 4.559 430.117 416.002" enable-background="new 0 4.559 430.117 416.002" xml:space="preserve">
 							<g>
 								<path id="LinkedIn" d="M430.117 261.543v159.018h-92.188V272.193c0-37.271-13.334-62.708-46.703-62.708 -25.474 0-40.632 17.142-47.302 33.724 -2.432 5.929-3.058 14.179-3.058 22.478v154.873h-92.219c0 0 1.242-251.286 0-277.32h92.21v39.309c-0.188 0.294-0.43 0.611-0.606 0.896h0.606v-0.896c12.251-18.869 34.13-45.824 83.103-45.824C384.634 136.724 430.117 176.361 430.117 261.543zM52.183 9.558C20.635 9.558 0 30.251 0 57.463c0 26.619 20.038 47.94 50.959 47.94h0.616c32.159 0 52.159-21.317 52.159-47.94C103.128 30.251 83.734 9.558 52.183 9.558zM5.477 420.561h92.184V143.24H5.477V420.561z"/>
 							</g>
 						</svg>
-						<span class="screenreader">Volg Michèle op LinkedIn</span>
 					</a>
 					</li>
 					<li>
-						<a href="http://www.twitter.com/michelenl/" title="Twitter">
+						<a href="http://www.twitter.com/michelenl/" title="Twitter" aria-label="Ga naar het Twitter account van Michèle">
 							<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" width="" height="" viewBox="0.001 174.445 595.278 488.27" enable-background="new 0.001 174.445 595.278 488.27" xml:space="preserve">
 							<g>
 							    <g>
@@ -37,45 +36,39 @@ permalink: /contact/
 								</g>
 							</g>
 						</svg>
-						<span class="screenreader">Volg Michèle op Twitter</span>
 					</a>
 				</li>
 				<li>	
-					<a href="http://www.instagram.com/michelevda/" title="Instagram">
+					<a href="http://www.instagram.com/michelevda/" title="Instagram" aria-label="Ga naar het Instagram account van Michèle">
 						<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" width="" height="" viewBox="0 0 510 510" enable-background="new 0 0 510 510" xml:space="preserve">
 							<path d="M459 0H51C22.95 0 0 22.95 0 51v408c0 28.05 22.95 51 51 51h408c28.05 0 51-22.95 51-51V51C510 22.95 487.05 0 459 0zM255 153c56.1 0 102 45.9 102 102 0 56.1-45.9 102-102 102 -56.101 0-102-45.9-102-102C153 198.9 198.9 153 255 153zM63.75 459C56.1 459 51 453.9 51 446.25V229.5h53.55C102 237.15 102 247.35 102 255c0 84.15 68.85 153 153 153 84.149 0 153-68.85 153-153 0-7.65 0-17.85-2.551-25.5H459v216.75c0 7.65-5.101 12.75-12.75 12.75H63.75zM459 114.75c0 7.65-5.101 12.75-12.75 12.75h-51c-7.65 0-12.75-5.1-12.75-12.75v-51c0-7.65 5.1-12.75 12.75-12.75h51C453.9 51 459 56.1 459 63.75V114.75z"/>
 						</svg>
-						<span class="screenreader">Volg Michèle op Instagram</span>
 					</a>		
 				</li>	
 				<li>
-					<a href="http://www.pinterest.com/michelenl/" title="Pinterest">
+					<a href="http://www.pinterest.com/michelenl/" title="Pinterest" aria-label="Ga naar het Pinterest profiel van Michèle">
 						<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" width="" height="" viewBox="61.14 119.445 473 599.14" enable-background="new 61.14 119.445 473 599.14" xml:space="preserve">
 							<path d="M256.45 517.02c-15.632 81.951-34.723 160.521-91.273 201.565 -17.454-123.87 25.638-216.894 45.646-315.656 -34.109-57.42 4.102-172.999 76.058-144.515 88.535 35.032-76.677 213.495 34.229 235.794 115.799 23.264 163.075-200.917 91.268-273.826 -103.744-105.269-302-2.399-277.618 148.318 5.929 36.854 43.997 48.027 15.209 98.881 -66.396-14.722-86.219-67.087-83.665-136.913 4.107-114.275 102.685-194.292 201.56-205.358 125.043-14.001 242.401 45.901 258.604 163.528 18.251 132.765-56.432 276.559-190.148 266.213C300.077 552.235 284.857 534.282 256.45 517.02z"/>
 						</svg>
-						<span class="screenreader">Volg Michèle op Pinterest</span>
 					</a>	
 				</li>
 				<li class="github">
-					<a href="https://github.com/michelenl">
+					<a href="https://github.com/michelenl" title="GitHub" aria-label="Ga naar het GitHub profiel van Michèle">
 						<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0" y="0" width="512" height="512" viewBox="0 0 475.1 475.1" xml:space="preserve">
 							<path d="M436.2 146.8c5.1-15.4 7.7-31.4 7.7-48 0-22.1-4.9-42.8-14.6-62.2 -20.4 0-38.3 3.7-54 11.1 -15.6 7.4-33.4 18.9-53.4 34.5 -25.1-6.1-51.8-9.1-79.9-9.1 -30.8 0-60.2 3.3-88.2 10 -20.4-16-38.4-27.7-54-35.3 -15.6-7.5-33.7-11.3-54.2-11.3 -9.7 19.4-14.6 40.2-14.6 62.2 0 16.8 2.6 32.9 7.7 48.5C12.9 177.6 0 215.3 0 260.4c0 39.6 5.9 71.1 17.7 94.5 6.3 12.4 14.5 23.3 24.6 32.8 10.1 9.5 21.6 17.2 34.5 23.1 12.9 5.9 26 10.8 39.1 14.7 13.1 3.9 27.6 6.8 43.5 8.6 15.9 1.8 29.9 3 42.1 3.6 12.2 0.6 25.7 0.9 40.5 0.9 17.5 0 33.4-0.4 47.7-1.3 14.3-0.9 30.6-3 49-6.3 18.4-3.3 34.5-7.9 48.5-13.6 14-5.7 27.4-13.9 40.3-24.6 12.8-10.7 22.9-23.3 30.1-38 11.6-23.6 17.4-55.1 17.4-94.5C475.1 215.1 462.1 177.2 436.2 146.8zM402 354.5c-6.1 12.5-13.8 22.3-23.1 29.4 -9.3 7.1-20.9 12.8-34.8 17.1 -13.9 4.3-27.2 7.1-40 8.4 -12.8 1.3-26.9 2-42.5 2h-48c-15.6 0-29.8-0.7-42.5-2 -12.8-1.3-26.1-4.1-40-8.4 -13.9-4.3-25.5-10-34.8-17.1 -9.3-7.1-17-16.9-23.1-29.4 -6.1-12.5-9.1-27.1-9.1-43.8 0-22.8 6.6-42.3 19.7-58.2 13.1-16 30.9-24 53.4-24 8.2 0 26.7 2 55.7 6 13.5 2.1 28.5 3.1 44.8 3.1 16.4 0 31.3-1 44.8-3.1 29.3-4 47.9-6 55.7-6 22.5 0 40.3 8 53.4 24 13.1 16 19.7 35.4 19.7 58.2C411.1 327.4 408.1 342 402 354.5zM166.9 265.5c-5.8-6.5-12.7-9.7-20.7-9.7 -8 0-14.9 3.2-20.7 9.7 -5.8 6.5-9.9 13.7-12.3 21.7 -2.4 8-3.6 15.8-3.6 23.4 0 7.6 1.2 15.4 3.6 23.4 2.4 8 6.5 15.2 12.3 21.7 5.8 6.5 12.7 9.7 20.7 9.7 8 0 14.9-3.2 20.7-9.7 5.8-6.5 9.9-13.7 12.3-21.7 2.4-8 3.6-15.8 3.6-23.4 0-7.6-1.2-15.4-3.6-23.4C176.8 279.2 172.7 272 166.9 265.5zM349.6 265.5c-5.8-6.5-12.7-9.7-20.7-9.7 -8 0-14.9 3.2-20.7 9.7 -5.8 6.5-9.9 13.7-12.3 21.7 -2.4 8-3.6 15.8-3.6 23.4 0 7.6 1.2 15.4 3.6 23.4 2.4 8 6.5 15.2 12.3 21.7 5.8 6.5 12.7 9.7 20.7 9.7 8 0 14.9-3.2 20.7-9.7 5.8-6.5 9.9-13.7 12.3-21.7 2.4-8 3.6-15.8 3.6-23.4 0-7.6-1.2-15.4-3.6-23.4C359.5 279.2 355.4 272 349.6 265.5z"/>
 						</svg>
-						<span class="screenreader">Volg Michèle op GitHub</span>
 					</a>
 				</li>
 				<li class="codepen">
-					<a href="http://www.codepen.io/michelenl/" title="CodePen">
+					<a href="http://www.codepen.io/michelenl/" title="CodePen" aria-label="Ga naar het CodePen profiel van Michèle">
 						<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" width="" height="" viewBox="0 0 31.665 31.665" enable-background="new 0 0 31.665 31.665" xml:space="preserve">
 							<path d="M16.877 0.415c-0.854-0.565-1.967-0.552-2.809 0.034L1.485 9.214c-0.671 0.468-1.071 1.233-1.071 2.052v9.443c0 0.84 0.421 1.623 1.122 2.086l12.79 8.455c0.836 0.554 1.922 0.554 2.758 0l13.043-8.617c0.701-0.463 1.123-1.246 1.123-2.086v-9.279c0-0.839-0.422-1.622-1.121-2.085L16.877 0.415zM26.622 10.645l-4.822 3.237 -4.521-3.288L17.25 4.127 26.622 10.645zM13.979 4.133v6.329l-4.633 3.24 -4.621-3.099L13.979 4.133zM3.458 13.722l2.991 2.004 -2.991 2.093V13.722zM14.058 27.215l-9.331-6.258L9.388 17.7l4.67 3.133V27.215zM12.286 15.674l3.021-2.113 3.52 2.313 -3.12 2.095L12.286 15.674zM17.354 27.215v-6.385l4.463-2.992 4.805 3.16L17.354 27.215zM27.954 17.926l-3.168-2.082 3.168-2.125V17.926z"/>
 						</svg>
-						<span class="screenreader">Volg Michèle op CodePen</span>
 					</a>
 				</li>		
 				<li class="lastfm">
-					<a href="http://last.fm/user/michelexxx" title="LastFM">
+					<a href="http://last.fm/user/michelexxx" title="LastFM" aria-label="Ga naar het LastFM profiel van Michèle">
 						<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0" y="0" viewBox="0 0 292.7 292.7" xml:space="preserve"><path d="M241.2 132.2c-2.8-0.9-5.6-1.7-8.4-2.6l-0.5-0.2c-26.7-8.8-28.9-10.5-28.9-22.1 0-13.6 15.6-16.4 28.6-16.4 17.8 0 29.1 4.6 34.4 14 1.4 2.4 4.4 3.3 6.8 1.9l16.5-9.3c1.2-0.7 2-1.7 2.4-3 0.4-1.3 0.2-2.6-0.5-3.8 -10.8-19-30.8-28.7-59.6-28.7 -19.1 0-34 4.8-44.2 14.2 -8.6 8-13.4 19-13.4 31.2 0 33.5 23.7 41.4 48.8 49.7l0.5 0.2c3 1 5.9 1.9 8.8 2.8l0.2 0.1c25.8 8 31 11.9 31 23.4 0 17.1-23.8 18.5-31.1 18.5h-5.7c-39.8 0-50.8-29.5-58.8-51 -1.1-2.9-2.1-5.6-3.1-8 -0.8-1.8-1.6-4.1-2.6-6.6 -4.6-12.1-10.8-28.6-23.2-42.8 -15.1-17.2-35-26-59.1-26 -0.8 0-1.7 0-2.5 0C34.1 68.5 0 104 0 148.4c0 44.7 34.9 81 77.9 81 20.5 0 39.9-8.2 54.6-23.2 0.9-0.9 1.4-2.2 1.4-3.6 0-1.3-0.6-2.6-1.5-3.5l-13.6-13.3c-0.9-0.9-2.2-1.4-3.6-1.4 -1.3 0-2.6 0.6-3.5 1.5 -9.2 9.3-21.2 14.5-33.9 14.5C50.9 200.4 29 177.1 29 148.4c0-28.5 21.6-51.3 49.2-52 37.8-0.9 48.9 28.6 57 50 1 2.7 2 5.3 2.9 7.6 0.8 1.9 1.7 4.2 2.7 6.9 4.5 12.1 10.7 28.7 23.2 43 15.6 17.8 36.7 26.9 62.7 26.9h5.7c17.5 0 32.5-4.4 43.2-12.6 11.1-8.5 16.9-20.6 16.9-34.9C292.7 148.2 263 139 241.2 132.2z"/></svg>
-						<span class="screenreader">Volg Michèle op LastFM</span>
 					</a>
 				</li>
 			</ul>
