--- a/werk.html
+++ b/werk.html
@@ -9,13 +9,12 @@ permalink: /werk/
 				<h1>Werk.</h1>
 			</header>
 			<div class="col">
-				
 				<p>Als front-end developer heb ik inmiddels veel ervaring met het vertalen van grafische ontwerpen naar mooie, snelle en toegankelijke websites. Hier een kleine selectie van mijn werk.</p>
 			</div>
 		</article>
 		<article class="block-item row">
 			<header class="col">
-				<a href="/werk/artipoppe/">
+				<a href="/werk/artipoppe/" aria-label="Lees meer over het Artipoppe HTML5 video project">
 					<h2>Artipoppe</h2>
 					<h3>Interactive video</h3>
 				</a>
@@ -26,7 +25,7 @@ permalink: /werk/
 		</article>
 		<article class="block-item row">
 			<header class="col">
-				<a href="/werk/poopy-cat/">
+				<a href="/werk/poopy-cat/" aria-label="Lees meer over het Poopy Cat front-end project">
 					<h2>Poopy Cat</h2>
 					<h3>Front-end website & shop</h3>
 				</a>	
@@ -38,7 +37,7 @@ permalink: /werk/
 		</article>
 		<article class="block-item row">
 			<header class="col">
-				<a href="/werk/qli-travel/">
+				<a href="/werk/qli-travel/" aria-label="Lees meer over het QLI Travel front-end project">
 					<h2>QLI Travel</h2>
 					<h3>Front-end website</h3>
 				</a>	
@@ -50,7 +49,7 @@ permalink: /werk/
 		</article>
 		<article class="block-item row">
 			<header class="col">
-				<a href="/werk/all-i-want-for-christmas/">
+				<a href="/werk/all-i-want-for-christmas/" aria-label="Lees meer over het All I want for christmas front-end project">
 					<h2>All I want for christmas</h2>
 					<h3>Front-end website</h3>
 				</a>	
@@ -62,7 +61,7 @@ permalink: /werk/
 		</article>
 		<article class="block-item row">
 			<header class="col">
-				<a href="/werk/rood-witte-schare/">
+				<a href="/werk/rood-witte-schare/" aria-label="Lees meer over het Rood Witte Schare full service project">
 					<h2>Rood Witte Schare</h2>
 					<h3>Design & ontwikkeling website</h3>
 				</a>	
