--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@ layout: default
 	</main>
 	<section class="instagram-feed">
 		<header>
-			<h3 class="beta">Instagram</h3>
+			<h3 class="beta"><a href="https://www.instagram.com/michelevda" aria-label="Ga naar het Instagram account van Michèle">Instagram</a></h3>
 		</header>
-		<a href="https://www.instagram.com/p/uyqhRXtpcc/?taken-by=michelevda">
+		<a href="https://www.instagram.com/p/uyqhRXtpcc/?taken-by=michelevda" aria-hidden="true">
 			<img src="/assets/images/instagram-picture-1-sm.jpg" srcset="/assets/images/instagram-picture-1-sm.jpg 400w, /assets/images/instagram-picture-1.jpg 1000w" sizes="(max-width: 1000px) 100vw, 1000px" alt="Foto van de kat van Michèle op Instagram">
 		</a>
-		<a href="https://www.instagram.com/p/uTTLjfNpbx/?taken-by=michelevda">
+		<a href="https://www.instagram.com/p/uTTLjfNpbx/?taken-by=michelevda" aria-hidden="true">
 			<img src="/assets/images/instagram-picture-2-sm.jpg" srcset="/assets/images/instagram-picture-2-sm.jpg 400w, /assets/images/instagram-picture-2.jpg 1000w"  sizes="(max-width: 1000px) 100vw, 1000px"  alt="Foto van de schoenen van Michèle op Instagram">
 		</a>
 	</section>
