Some layout refactoring

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ layout: default
 ---
 	<main class="about">
 		<article class="block-introduction row">
-			<header class="col">
-				<h1>Hey,<br>hi & hello.</h1>
+			<header class=" col" style="">
+				<h1>Hey,<br>hi &amp; hello.</h1>
 			</header>
 			<div class="col">
 				<p>Ik houd van gebruiksvriendelijke en mooie websites. In 2007 ben ik dan ook als <strong>front-end web developer</strong> aan de slag gegaan bij <strong>Occhio</strong>, onwijs leuk web bureau gevestigd in Amsterdam.  </p>
@@ -14,8 +14,8 @@ layout: default
 		<section class="row"> 
 			<div class="col">
 				<p class="beta">inmiddels...</p>
-				<p>Heb ik als front-end developer veel ervaring met het vertalen van ontwerpen naar <strong>mooie</strong>, <strong>snelle</strong> & toegankelijke websites.</p>
-				<p>Nadenken over hoe <strong>responsive</strong> sites horen te werken en het toevoegen van <em>CSS animaties & transities</em>, vind ik het leukst om te doen.</p>
+				<p>Heb ik als front-end developer veel ervaring met het vertalen van ontwerpen naar <strong>mooie</strong>, <strong>snelle</strong> &amp; toegankelijke websites.</p>
+				<p>Nadenken over hoe <strong>responsive</strong> sites horen te werken en het toevoegen van <em>CSS animaties &amp; transities</em>, vind ik het leukst om te doen.</p>
 
 				<p>Sinds 2015 geef ik af en toe les, aan de Hogeschool van Amsterdam. Tijdens deze lessen leren CMD-studenten hoe gaaf front-end development wel niet is.</p>
 			</div>
