Some cleaning up

--- a/curriculum-vitae.html
+++ b/curriculum-vitae.html
@@ -65,7 +65,7 @@ permalink: /curriculum-vitae/
 				<h3>Creative front-end developer</h3>
 				<section class="skill-code">
 					<h4>Code</h4>
-					<p>XHTML1, HTML5, CSS2 & 3, Sass, Less, Compass, jQuery, Liquid, Smarty</p>
+					<p>XHTML1, HTML5, CSS2 &amp; 3, Sass, Less, Compass, jQuery, Liquid, Smarty</p>
 				</section>
 				<section class="skill-cms">
 					<h4>CMS</h4>
@@ -106,7 +106,7 @@ permalink: /curriculum-vitae/
 				</dt>
 				<dd>
 					<article>
-						<h3>Gastdocent  Communication & Multimedia Design</h3>
+						<h3>Gastdocent  Communication &amp; Multimedia Design</h3>
 						<p>Hogeschool van Amsterdam</p>
 					</article>
 					<span aria-hidden="true" class="time-dot"></span>
@@ -154,7 +154,7 @@ permalink: /curriculum-vitae/
 				</dt>
 				<dd>
 					<article>
-						<h3>B Communication & Multimedia Design</h3>
+						<h3>B Communication &amp; Multimedia Design</h3>
 						<p>Hogeschool van Amsterdam</p>
 					</article>
 					<span aria-hidden="true" class="time-dot"></span>
@@ -173,7 +173,7 @@ permalink: /curriculum-vitae/
 		</section>
 		<section class="cv-section block-item courses row" id="cursussen-workshops">
 			<header class="col">
-				<h2>Cursussen & workshops</h2>
+				<h2>Cursussen &amp; workshops</h2>
 			</header>
 			<dl class="timeline col">
 				<dt>2016</dt>
@@ -220,7 +220,7 @@ permalink: /curriculum-vitae/
 				<dd>
 					<article>
 						<h3> Screw CSS!</h3>
-						<p>Sass & pre-processors, door Roy Tomeij / Fronteers</p>
+						<p>Sass &amp; pre-processors, door Roy Tomeij / Fronteers</p>
 					</article>
 					<span aria-hidden="true" class="time-dot"></span>
 				</dd>
