--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 ---
 	<main class="about">
 		<article class="block-introduction row">
-			<header class=" col" style="">
+			<header class="col">
 				<h1>Hey,<br>hi &amp; hello.</h1>
 			</header>
 			<div class="col">
