--- a/werk.html
+++ b/werk.html
@@ -27,7 +27,7 @@ permalink: /werk/
 			<header class="col">
 				<a href="/werk/poopy-cat/" aria-label="Lees meer over het Poopy Cat front-end project">
 					<h2>Poopy Cat</h2>
-					<h3>Front-end website & shop</h3>
+					<h3>Front-end website &amp; shop</h3>
 				</a>	
 			</header>
 			<div class="col" aria-hidden="true" role="presentation">
@@ -63,7 +63,7 @@ permalink: /werk/
 			<header class="col">
 				<a href="/werk/rood-witte-schare/" aria-label="Lees meer over het Rood Witte Schare full service project">
 					<h2>Rood Witte Schare</h2>
-					<h3>Design & ontwikkeling website</h3>
+					<h3>Design &amp; ontwikkeling website</h3>
 				</a>	
 			</header>
 			<div class="col" aria-hidden="true" role="presentation">
