Finetuning several effects

--- a/curriculum-vitae.html
+++ b/curriculum-vitae.html
@@ -250,7 +250,7 @@ permalink: /curriculum-vitae/
 				<h2>Vragen?</h2>
 				<p>Neem gerust contact met me op. Ik beantwoord ze graag.</p>
 				<!-- <a role="button" href="#">Download CV als pdf</a> -->
-				<a role="button" href="mailto:michele.vd.aardweg@gmail.com">Mail Michèle</a>
+				<a role="button" class="inverted" href="mailto:michele.vd.aardweg@gmail.com">Mail Michèle</a>
 			</section>
 		</div>
 	</main>
