--- a/curriculum-vitae.html
+++ b/curriculum-vitae.html
@@ -85,7 +85,6 @@ permalink: /curriculum-vitae/
 				</section>
 			</div>
 		</section>
-
 		<section class="cv-section block-item row" id="werkervaring">
 			<header class="col">
 				<h2>Werkervaring</h2>
@@ -143,15 +142,12 @@ permalink: /curriculum-vitae/
 				</dd>
 			</dl>
 		</section>
-			
 		<section class="cv-section block-item courses row" id="opleiding">
 			<header class="col">
 				<h2>Opleiding</h2>
 			</header>
 			<dl class="timeline col">
-				<dt>
-					HBO
-				</dt>
+				<dt>HBO</dt>
 				<dd>
 					<article>
 						<h3>B Communication &amp; Multimedia Design</h3>
@@ -159,9 +155,7 @@ permalink: /curriculum-vitae/
 					</article>
 					<span aria-hidden="true" class="time-dot"></span>
 				</dd>
-				<dt>
-					VO
-					</dt>
+				<dt>VO</dt>
 				<dd>
 					<article>
 						<h3>HAVO </h3>
