Some content changes for SEO

--- a/contact.html
+++ b/contact.html
@@ -9,11 +9,13 @@ permalink: /contact/
 	</div>
 	<div class="col">
 		<article> 
-			<h2>LinkedIn:</h2>
+			<h2>Michèle van den Aardweg</h2>
+			<br>
+			<h3>LinkedIn:</h3>
 			<p>
 				<a href="https://www.linkedin.com/in/michelevdaardweg" aria-label="Ga naar het LinkedIn profiel van Michèle">linkedin.com/in/michelevdaardweg</a>
 			</p>
-			<h2>Email:</h2>
+			<h3>Email:</h3>
 			<p>
 				<a href="mailto:mail@michele.nl" aria-label="Stuur Michèle een email">mail@michele.nl</a>
 			</p>
