--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-title: Front-end developer in Amsterdam en Utrecht Michèle
+title: Front-end developer, Amsterdam & Utrecht
 layout: default
 ---
 	<main class="about">
@@ -8,7 +8,7 @@ layout: default
 				<h1>Hey,<br>hi &amp; hello.</h1>
 			</header>
 			<div class="col">
-				<p>Ik houd van gebruiksvriendelijke en mooie websites. In 2007 ben ik dan ook als <strong>front-end web developer</strong> aan de slag gegaan bij <strong>Occhio</strong>, onwijs leuk web bureau gevestigd in Amsterdam.  </p>
+				<p>Ik ben <strong>Michèle van den Aardweg</strong> en ik houd van gebruiksvriendelijke en mooie websites. In 2007 ben ik dan ook als <strong>front-end web developer</strong> aan de slag gegaan bij <strong>Occhio</strong>, onwijs leuk web bureau gevestigd in Amsterdam.  </p>
 			</div>
 		</article>
 		<section class="row"> 
@@ -20,7 +20,7 @@ layout: default
 				<p>Sinds 2015 geef ik af en toe les, aan de Hogeschool van Amsterdam. Tijdens deze lessen leren CMD-studenten hoe gaaf front-end development wel niet is.</p>
 			</div>
 			<div class="col">
-				<p>Binnen het vakgebied ben ik een wandelend cliché: ik houd van lekkere koffie én katten. Gelukkig ben ik geen ninja, of een unicorn.</p>
+				<p>Binnen het vakgebied ben ik een wandelend cliché: ik houd van lekkere koffie én katten. Gelukkig ben ik geen <em>ninja</em>, of een <em>unicorn</em>.</p>
 				<h2 class="gamma">En verder?</h2>
 				<p>Verder ben ik gek op Scandinavische detectives, spekkoek, concerten, vegetarisch voedsel, onze kat <a href="https://www.instagram.com/p/BFPPT1OtpQ_/">Saai</a>, speuren naar vintage meubels, horror- en arthouse films, een lekker potje metal en <em>Monkey Island™</em>.</p>
 				<a href="/werk/" role="button">Bekijk Werk</a>
