--- a/_posts/2010-01-04-rood-witte-schare.html
+++ b/_posts/2010-01-04-rood-witte-schare.html
@@ -29,7 +29,7 @@ categories:
 			</dl>
 		</div>
 		<div class="col">
-			<a role="button" href="mailto:mail@michele.nl">Webadres op aanvraag</a>
+			<a role="button" href="mailto:michele.vd.aardweg@gmail.com">Webadres op aanvraag</a>
 		</div>
 	</footer>
 	<div class="image-container">
