--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@ permalink: /contact/
 			</p>
 			<h3>Email:</h3>
 			<p>
-				<a href="mailto:mail@michele.nl" aria-label="Stuur Michèle een email">mail@michele.nl</a>
+				<a href="mailto:michele.vd.aardweg@gmail.com" aria-label="Stuur Michèle een email">michele.vd.aardweg@gmail.com</a>
 			</p>
 			<ul class="social-media-list">
 				<li>
