--- a/curriculum-vitae.html
+++ b/curriculum-vitae.html
@@ -28,7 +28,7 @@ permalink: /curriculum-vitae/
 					<dt>Telefoon</dt>
 					<dd itemprop="telephone">06 - 28 56 47 09  </dd>
 					<dt>Email</dt>
-					<dd><a itemprop="email" href="mailto:mail@michele.nl ">mail@michele.nl</a></dd>
+					<dd><a itemprop="email" href="mailto:michele.vd.aardweg@gmail.com">michele.vd.aardweg@gmail.com</a></dd>
 				</dl>
 				<ul class="social-media-list">
 					<li>
